--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   provider: ^4.3.2+1
   cached_network_image: ^2.2.0+1
   flutter_share: ^1.0.2+1
+  shared_preferences: ^0.5.8
 
 dev_dependencies:
   flutter_test:
