Home empty state

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ flutter:
     - assets/images/icons8-search-64.png
     - assets/images/icons8-unavailable-64.png
     - assets/images/icons8-quote-left-64.png
+    - assets/images/icons8-up-right-64.png
 
   fonts:
     - family: Montserrat
